# ledeaf

./: .gitignore  README.md
base/: README.md  base.slvs  base.stl
bridge/: bridge.kicad_pcb  bridge.kicad_prl  bridge.kicad_pro  bridge.kicad_sch
driver/: JLCSMT_BOM.xlsx  JLCSMT_POS.xlsx  README.md  driver.kicad_pcb  driver.kicad_prl  driver.kicad_pro  driver.kicad_sch
firmware/: Cargo.toml  Embed.toml  README.md  memory.x
firmware/.cargo/: config.toml
firmware/src/: ir.rs  main.rs  patterns.rs  timer.rs
laser/: README.md  cover.dxf  cover_100x150.dxf
triangle/: JLCSMT_BOM.xlsx  JLCSMT_CPL.xlsx  fp-lib-table  sym-lib-table  triangle-all-pos.csv  triangle-all-pos.xlsx  triangle.kicad_pcb  triangle.kicad_prl  triangle.kicad_pro  triangle.kicad_sch  ws2812-4020.step  ws2812-4020.txt
